--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Web App</title>
+        <link rel="stylesheet" href="styles.css">
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
