removed htmlminifier and added html watch, also updated readme

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,6 @@
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
-        <h1>Web App Built</h1>
+        <h1>Web App Built</h1>sfsd
     </body>
 </html>
